resolved issue of movie-api

--- a/movie-ticket-booking/gateway-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/gateway-service/src/main/resources/application.yml
@@ -67,6 +67,8 @@ gateway:
     open-endpoints:
       - /api/auth/login
       - /api/auth/register
+      - /api/movies/getAllMovies
+      - /api/movies/id/*
 logging:
   level:
     org.springframework.security: DEBUG
