--- a/movie-ticket-booking/gateway-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/gateway-service/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
         - id: booking-service
           uri: lb://BOOKING-SERVICE
           predicates:
-            - Path=/api/bookings/**
+            - Path=/api/bookings/**,/api/seats/**
           filters:
             - name: AuthenticationFilter
               args:
