--- a/movie-ticket-booking/movie-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/movie-service/src/main/resources/application.yml
@@ -4,15 +4,15 @@ spring:
   application:
     name: movie-service
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:xe
-    username: movie_db
-    password: sarasu10
-    driver-class-name: oracle.jdbc.OracleDriver
+    url: jdbc:mysql://localhost:3306/movie_db?createDatabaseIfNotExist=true
+    username: root
+    password: root
+
 
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+#    show-sql: true
     properties:
       hibernate:
         format_sql: true
