--- a/movie-ticket-booking/gateway-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/gateway-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   main:
-   web-application-type: reactive
+    web-application-type: reactive
   application:
     name: gateway-service
   cloud:
@@ -9,26 +9,42 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins:
-              - http://localhost:3000
               - http://10.0.0.52:5173
+              - http://localhost:5173
             allowedMethods:
-              - "*"
+              - OPTIONS
+              - POST
+              - GET
+              - PUT
+              - PATCH
+              - DELETE
             allowedHeaders:
               - "*"
             exposedHeaders:
               - "*"
             allowCredentials: true
-        default-filters:
-          - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+
       routes:
+        # User_Service
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
-            - Path=/api/auth/**, /api/users/**
+            - Path=/api/auth/**,/api/users/**
           filters:
             - name: AuthenticationFilter
               args:
                 skip: false
+            - name: CircuitBreaker
+              args:
+                name: userServiceCircuitBreaker
+                fallbackUri: forward:/fallback/user-service
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY, SERVICE_UNAVAILABLE
+                methods: GET, POST
+
+        # Movie_Service
         - id: movie-service
           uri: lb://MOVIE-SERVICE
           predicates:
@@ -37,6 +53,17 @@ spring:
             - name: AuthenticationFilter
               args:
                 skip: false
+            - name: CircuitBreaker
+              args:
+                name: movieServiceCircuitBreaker
+                fallbackUri: forward:/fallback/movie-service
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY, SERVICE_UNAVAILABLE
+                methods: GET, POST
+
+        # Booking_Service
         - id: booking-service
           uri: lb://BOOKING-SERVICE
           predicates:
@@ -45,6 +72,17 @@ spring:
             - name: AuthenticationFilter
               args:
                 skip: false
+            - name: CircuitBreaker
+              args:
+                name: bookingServiceCircuitBreaker
+                fallbackUri: forward:/fallback/booking-service
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY, SERVICE_UNAVAILABLE
+                methods: GET, POST
+
+        # Payment_Service
         - id: payment-service
           uri: lb://PAYMENT-SERVICE
           predicates:
@@ -53,6 +91,16 @@ spring:
             - name: AuthenticationFilter
               args:
                 skip: false
+            - name: CircuitBreaker
+              args:
+                name: paymentServiceCircuitBreaker
+                fallbackUri: forward:/fallback/payment-service
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY, SERVICE_UNAVAILABLE
+                methods: GET, POST
+
   security:
     csrf:
       enabled: false
@@ -61,8 +109,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
 server:
   port: 8085
+
 gateway:
   auth:
     open-endpoints:
@@ -70,8 +120,81 @@ gateway:
       - /api/auth/register
       - /api/movies/getAllMovies
       - /api/movies/id/*
-      -
-logging:
-  level:
-    org.springframework.security: DEBUG
 
+resilience4j:
+  circuitbreaker:
+    instances:
+      userServiceCircuitBreaker:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 60
+        slowCallDurationThreshold: 10s
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 15s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        registerHealthIndicator: true
+        ignoreExceptions:
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+
+      movieServiceCircuitBreaker:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 60
+        slowCallDurationThreshold: 10s
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 15s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        registerHealthIndicator: true
+        ignoreExceptions:
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+
+      bookingServiceCircuitBreaker:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 60
+        slowCallDurationThreshold: 10s
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 15s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        registerHealthIndicator: true
+        ignoreExceptions:
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+
+      paymentServiceCircuitBreaker:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 60
+        slowCallDurationThreshold: 10s
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 15s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        registerHealthIndicator: true
+        ignoreExceptions:
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+
+  timelimiter:
+    instances:
+      userServiceCircuitBreaker:
+        timeoutDuration: 10s
+      movieServiceCircuitBreaker:
+        timeoutDuration: 10s
+      bookingServiceCircuitBreaker:
+        timeoutDuration: 10s
+      paymentServiceCircuitBreaker:
+        timeoutDuration: 10s
