--- a/movie-ticket-booking/user-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/user-service/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
     hibernate:
       ddl-auto: update
 #    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        generate_statistics: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#        generate_statistics: true
 
 eureka:
   client:
@@ -28,14 +28,14 @@ jwt:
     expiration: 2400000 # 15 minutes in milliseconds
   refresh-token:
     expiration: 604800000 # 7 days in milliseconds
-logging:
-  level:
-    org:
-      hibernate:
-        sql: DEBUG
-        type:
-          descriptor:
-            sql: TRACE
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        sql: DEBUG
+#        type:
+#          descriptor:
+#            sql: TRACE
 
 #    org.springframework.web: DEBUG
 #    org.springframework.security: DEBUG
