--- a/movie-ticket-booking/movie-service/src/main/resources/application.yml
+++ b/movie-ticket-booking/movie-service/src/main/resources/application.yml
@@ -7,7 +7,12 @@ spring:
     url: jdbc:mysql://localhost:3306/movie_db?createDatabaseIfNotExist=true
     username: root
     password: root
-
+  cache:
+    type: redis
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 60000
 
   jpa:
     hibernate:
